# NSU_CS

./: LICENSE  README.md
EVMiPU/: README.md
EVMiPU/pr.1/: 206_Taskaev_pr1.doc  zadan_pract1.doc
EVMiPU/pr.2/: 206_Taskaev_pr2.doc  zadan_pract2.doc
EVMiPU/pr.4/: 206_Taskaev_pr4.doc  zadan_comment_pract4_OpenCV_LibUSB.doc
EVMiPU/pr.5/: 206_Taskaev_pr5.doc  zadan_comment_pract_vectorization.doc
EVMiPU/pr.6/: 206_Taskaev_pr6.doc  zadan_comment_pract6.doc
EVMiPU/pr.7/: 206_Taskaev_pr7.doc  zadan_comment_pract7_assoc_cache.doc
OOP_C++/TerminalBattleCity/: CMakeLists.txt  README.md
OOP_C++/TerminalBattleCity/src/: Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  GameContext.cpp  GameContext.hpp  GameEngine.cpp  GameEngine.hpp  GameObject.cpp  GameObject.hpp  Leaderboard.cpp  Leaderboard.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  UI.cpp  UI.hpp  game.cpp
OOP_Java/: README.md
OS/lab3-1/: dir_process.c  dir_process.h  file_process.c  file_process.h  main.c  utils.c  utils.h
OS/lab4-1/: 1(abc).c  2(d).c  3(ef).c  4(ghijk).c
OS/lab5-1/: README.md  main.c
OS/lab7-1/: README.md  client.c  server.c
OS2/: README.md
SETI/exam/: README.md  Сети - задания.docx
